--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,15 @@
         overflow-x: hidden;
       }
     </style>
+    <script type="text/javascript" src="api.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
-    Hello
+    <form id='addQaItemForm'>
+      <input type="text" name="question" placeholder="Question" /><br />
+      <input type="text" name="answer" placeholder="Answer" /><br />
+      <input type="hidden" name="url" id='url' />
+      <input type='submit' value='submit' />
+    </form>
   </body>
 </html>
