--- a/popup.html
+++ b/popup.html
@@ -9,14 +9,26 @@
       }
     </style>
     <script type="text/javascript" src="api.js"></script>
+    <script type="text/javascript" src='ui.js'></script>
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
-    <form id='addQaItemForm'>
-      <input type="text" name="question" placeholder="Question" /><br />
-      <input type="text" name="answer" placeholder="Answer" /><br />
-      <input type="hidden" name="url" id='url' />
-      <input type='submit' value='submit' />
-    </form>
+    <aside>
+      <a href="#" id='lnkList'>Questions</a>
+      <a href="#" id='lnkAdd'>Add a question</a>
+    </aside>
+
+    <article id='list'>
+
+    </article>
+
+    <article id='addform'>
+      <form id='addQaItemForm'>
+        <input type="text" name="question" placeholder="Question" /><br />
+        <input type="text" name="answer" placeholder="Answer" /><br />
+        <input type="hidden" name="url" id='url' />
+        <input type='submit' value='submit' />
+      </form>
+    </article>
   </body>
 </html>
