Swapped plus for tick

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>KnowledgeBox</title>
+    <meta charset="UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css"></link>
     <script type="text/javascript" src="user.js"></script>
