--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
         <div class="qaSection">
           <label for="question" class="qaLabel">Q</label>
           <input type="text" name="question" placeholder="Question" class="qaTextBox" />
+          <input type='hidden' name='user_id' id='user_id_hack_thing'/>
         </div>
         <div class="qaSection">
           <label for="answer" class="qaLabel">A</label>
@@ -45,8 +46,8 @@
       <h1>New here? Sign up</h1>
       <form action='/register/' id='registerForm'>
         <input type='text' name='username' placeholder="Username" class="loginTextBox" />
-        <input type='password' name='password'  placeholder="Password" class="loginTextBox" />
-        <input type='password2' name='password'  placeholder="Password (confirmation)" class="loginTextBox"/>
+        <input type='password' name='password' placeholder="Password" class="loginTextBox" />
+        <input type='password' name='password2' placeholder="Password (confirmation)" class="loginTextBox"/>
         <input type='submit' value='Sign me up' class='qaButton'>
       </form>
 
