--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
       <form action='/register/' id='registerForm'>
         <input type='text' name='username' placeholder="Username" class="loginTextBox" />
         <input type='password' name='password'  placeholder="Password" class="loginTextBox" />
-        <input type='password2' name='password'  placeholder="Password (confirmation)" class="loginTextBox"/>
+        <input type='password' name='password2'  placeholder="Password (confirmation)" class="loginTextBox"/>
         <input type='submit' value='Sign me up' class='qaButton'>
       </form>
 
